--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
                     </div>
                 </div>
 
-                <!-- Infrastructure Tools -->
-
                 <!-- Water Features -->
                 <div class="tool-section">
                     <h4>💧 Water Features</h4>
@@ -247,12 +245,11 @@
     <script src="procedural-generation.js"></script>
     <script src="utility-functions.js"></script>
     <script src="resource-management.js"></script>
-    <script src="script.js"></script>
     
     <!-- Multiplayer WebSocket -->
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     <script src="websocket-manager.js"></script>
-    <script src="multiplayer-integration-simple.js"></script>
+    <script src="multiplayer-integration-simple.js?v=20241220-dropdown"></script>
     <script src="main.js"></script>
 </body>
 </html>
