--- a/index.html
+++ b/index.html
@@ -145,15 +145,38 @@
                 </div>
                 
                 <div class="info-section">
-                    <h4>📍 Cell Details</h4>
+                    <h4>📌 CELL DETAILS</h4>
                     <div id="cellInfo" class="cell-info">
-                        <p>Click on a cell to see its information</p>
+                        <div class="cell-detail-item">Selected: grassland</div>
+                        <div class="cell-detail-item">Description: Unknown attribute</div>
+                        <div class="cell-detail-item">Rules: No specific rules</div>
                     </div>
                 </div>
 
                 <div class="info-section">
-                    <h4>📈 Statistics</h4>
-                    <div id="stats" class="stats-grid"></div>
+                    <h4>📊 STATISTICS</h4>
+                    <div id="stats" class="stats-grid">
+                        <div class="stat-item">
+                            <div class="stat-label">Total Cells</div>
+                            <div class="stat-value">3600</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">Grassland</div>
+                            <div class="stat-value">3600</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">Water</div>
+                            <div class="stat-value">0</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">Forest</div>
+                            <div class="stat-value">0</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-label">Mountain</div>
+                            <div class="stat-value">0</div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="info-section">
