--- a/index.html
+++ b/index.html
@@ -85,36 +85,44 @@
                                 <h4>📦 Resources</h4>
                                 <div class="resource-display" id="resourceDisplay">
                                     <div class="resource-item">
-                                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
-                                            <span class="resource-icon">🪵</span>
-                                            <span class="resource-name">Wood: </span>
-                                            <span class="resource-amount">0</span>
+                                        <div style="display: flex; align-items: center; justify-content: space-between;">
+                                            <div style="display: flex; align-items: center;">
+                                                <span class="resource-icon">🪵</span>
+                                                <span class="resource-name">Wood: </span>
+                                                <span class="resource-amount">0</span>
+                                            </div>
+                                            <span class="resource-rate">(+0.0/s)</span>
                                         </div>
-                                        <span class="resource-rate">(+0.0/s)</span>
                                     </div>
                                     <div class="resource-item">
-                                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
-                                            <span class="resource-icon">⛏️</span>
-                                            <span class="resource-name">Ore: </span>
-                                            <span class="resource-amount">0</span>
+                                        <div style="display: flex; align-items: center; justify-content: space-between;">
+                                            <div style="display: flex; align-items: center;">
+                                                <span class="resource-icon">⛏️</span>
+                                                <span class="resource-name">Ore: </span>
+                                                <span class="resource-amount">0</span>
+                                            </div>
+                                            <span class="resource-rate">(+0.0/s)</span>
                                         </div>
-                                        <span class="resource-rate">(+0.0/s)</span>
                                     </div>
                                     <div class="resource-item">
-                                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
-                                            <span class="resource-icon">📦</span>
-                                            <span class="resource-name">Goods: </span>
-                                            <span class="resource-amount">0</span>
+                                        <div style="display: flex; align-items: center; justify-content: space-between;">
+                                            <div style="display: flex; align-items: center;">
+                                                <span class="resource-icon">📦</span>
+                                                <span class="resource-name">Goods: </span>
+                                                <span class="resource-amount">0</span>
+                                            </div>
+                                            <span class="resource-rate">(+0.0/s)</span>
                                         </div>
-                                        <span class="resource-rate">(+0.0/s)</span>
                                     </div>
                                     <div class="resource-item">
-                                        <div style="display: flex; align-items: center; margin-bottom: 4px;">
-                                            <span class="resource-icon">⚡</span>
-                                            <span class="resource-name">Power: </span>
-                                            <span class="resource-amount">0</span>
+                                        <div style="display: flex; align-items: center; justify-content: space-between;">
+                                            <div style="display: flex; align-items: center;">
+                                                <span class="resource-icon">⚡</span>
+                                                <span class="resource-name">Power: </span>
+                                                <span class="resource-amount">0</span>
+                                            </div>
+                                            <span class="resource-rate">(+0.0/s)</span>
                                         </div>
-                                        <span class="resource-rate">(+0.0/s)</span>
                                     </div>
                                 </div>
                             </div>
