--- a/index.html
+++ b/index.html
@@ -301,5 +301,10 @@
     <script src="websocket-manager.js"></script>
     <script src="multiplayer-integration-simple.js?v=20241220-dropdown"></script>
     <script src="main.js"></script>
+
+    <!-- Next Turn Button (Fixed Position) -->
+    <button id="next-turn-fixed-btn" class="next-turn-fixed" style="display: none;">
+        Next Turn
+    </button>
 </body>
 </html>
