--- a/index.html
+++ b/index.html
@@ -302,13 +302,16 @@
     <script src="multiplayer-integration-simple.js?v=20241220-dropdown"></script>
     <script src="main.js"></script>
 
-    <!-- Next Turn Button with Timer (Fixed Position) -->
+    <!-- Next Turn Button with Timer and Action Counter (Fixed Position) -->
     <div class="next-turn-container" style="display: none;">
         <button id="next-turn-fixed-btn" class="next-turn-fixed">
             Next Turn
         </button>
         <div id="turn-timer-fixed" class="turn-timer-fixed">
             --:--
+        </div>
+        <div id="action-counter-fixed" class="action-counter-fixed">
+            Actions: 3/3
         </div>
     </div>
 </body>
