--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </div>
                         <div class="player-btn-container">
                             <button id="zoneMixed" class="player-btn" data-attribute="mixed" data-class="mixed">🏬 Mixed Use</button>
-                            <div class="cost-display">36🪵 16⛏️</div>
+                            <div class="cost-display">44🪵 24⛏️</div>
                         </div>
                     </div>
                 </div>
@@ -292,9 +292,11 @@
     <script src="cell-interaction.js"></script>
     <script src="water-system.js"></script>
     <script src="road-system.js"></script>
+    <script src="power-line-system.js"></script>
     <script src="procedural-generation.js"></script>
     <script src="utility-functions.js"></script>
     <script src="resource-management.js"></script>
+    <script src="dev-mode.js"></script>
     
     <!-- Multiplayer WebSocket -->
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
