--- a/backups/backup_2025-10-08_10-28-14/index.html
+++ b/backups/backup_2025-10-08_10-28-14/index.html
@@ -311,7 +311,7 @@
     <!-- Multiplayer WebSocket -->
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     <script src="websocket-manager.js?v=20241220-fix"></script>
-    <script src="multiplayer-integration-simple.js?v=20241220-refresh"></script>
+    <script src="multiplayer-integration-simple.js?v=20241220-status-fix"></script>
     <script src="main.js"></script>
 
     <!-- Next Turn Button with Timer and Action Counter (Fixed Position) -->
